# transaction-fetcher

./: .gitignore  README.md  alembic.ini  bot.py  currencies.json  db.py  example.env  exceptions.py  logger.py  main.py  pyproject.toml  test.py  utils.py
alembic/: env.py
alembic/versions/: 51684e4e10d5_init.py
enums/: account.py  chat.py  notification_setting.py  transaction.py
models/: __init__.py  account.py  account_chat_model.py  base.py  chat.py  notification.py  notification_setting.py  transaction.py
providers/account/: abank.py  base.py  get.py  monobank.py  novapay.py  privatbank_fop.py
providers/account/misc/abank/: callback_server.py  sender.py
providers/account/misc/novapay/: authentication.py
providers/notification/: base.py  get.py  telegram.py
repository/: account.py  chat.py  currency.py  notification.py  settings.py  transaction.py
schemas/: account.py  base.py  chat.py  currency.py  notification.py  transaction.py
services/: account.py  chat.py  currency.py  notification.py  transaction.py
